fix(ccls-2217): Add BaseEvidenceDocumentDetail for query response (#39)